apps/web/src/assets/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --radius: 0.5rem;
  }
}

::selection {
  @apply bg-primary-500 text-white;
}

body {
  @apply text-gray-800;
}

a {
  @apply hover:text-primary-600 transition-all;
}

h1 {
  @apply scroll-m-20 my-2 text-4xl font-extrabold tracking-tight lg:text-5xl;
}

h2 {
  @apply scroll-m-20 my-2 text-3xl font-semibold tracking-tight first:mt-0;
}

h3 {
  @apply scroll-m-20 my-2 text-2xl font-semibold tracking-tight;
}

h4 {
  @apply scroll-m-20 my-2 text-xl font-semibold tracking-tight;
}

.container-nav {
  @apply fixed md:static top-0 w-full flex text-center h-screen md:h-auto bg-primary-200 md:bg-transparent items-center z-50 -translate-y-full md:translate-y-0 transition-all;
}

.main-nav {
  @apply flex flex-col md:flex-row w-full md:justify-end md:items-center md:space-x-4 p-4  space-y-2 md:space-y-0 gap-1 md:gap-0;
}

.main-nav li a {
  @apply p-3 block md:inline hover:bg-primary-300 md:hover:bg-gray-100 rounded text-sm transition-all;
}

.parent-nav {
  @apply relative box-border;
}

.subnav {
  @apply absolute bg-gray-100 w-full h-auto max-h-0 overflow-hidden transition-all duration-200 -translate-y-4 opacity-0 shadow-sm rounded;
}

.subnav li a {
  @apply block hover:bg-gray-200;
}

.parent-nav:hover .subnav {
  @apply max-h-96 translate-y-0 opacity-100;
}

.link-active {
  @apply md:bg-gray-100 bg-primary-300;
}

.show {
  @apply translate-y-0;
}

.marriage-el-children {
  @apply flex justify-between items-start py-4 gap-2;
}

.marriage-el-children-container {
  @apply border-b pb-3;
}

.marriage-el-children-container:last-child {
  @apply border-none;
}

